k8s/mett-app/overlays/dev/celery-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-test-celery-worker
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-test-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-test-celery-worker
  template:
    metadata:
      labels:
        app: mett-test-celery-worker
    spec:
      securityContext:
        runAsUser: 7123
        runAsGroup: 1347
      volumes:
        - name: pyhmmer-data
          persistentVolumeClaim:
            claimName: mett-test-pyhmmer-pvc
      containers:
        - name: test-celery-worker
          image: quay.io/microbiome-informatics/mett-dataportal-api:v0.0.146d
          volumeMounts:
            - name: pyhmmer-data
              mountPath: /data/pyhmmer
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "2"
              memory: "8Gi"
          command: [ "celery" ]
          args: [
            "-A", "dataportal", "worker",
            "-l", "INFO",
            "-Q", "pyhmmer_queue",
            "--concurrency=2",
            "--max-tasks-per-child=10"
          ]
      imagePullSecrets:
        - name: quay-pull-secret
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: mett-pyhmmer-data
#                    operator: In
#                    values:
#                      - "true"
