k8s/mett-app/overlays/dev/mett-dataportal-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-dataportal-app-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-dataportal-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-dataportal-app-dev
  template:
    metadata:
      labels:
        app: mett-dataportal-app-dev
    spec:
      containers:
        - image: dockerhub.ebi.ac.uk/microbiome-informatics/containers/mett-dataportal-react-app
          imagePullPolicy: Always
          name: mett-dataportal-app-dev
          ports:
            - containerPort: 80
              name: react-app
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 300
            successThreshold: 1
            failureThreshold: 3
      imagePullSecrets:
        - name: containers-pull-secret

---

apiVersion: v1
kind: Service
metadata:
  name: mett-dataportal-app-dev-svc
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-dataportal-app-dev
spec:
  type: NodePort
  selector:
    app: mett-dataportal-app-dev
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31028
