k8s/mett-app/overlays/dev/mett-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mett-redis-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-redis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mett-redis-dev
  template:
    metadata:
      labels:
        app: mett-redis-dev
    spec:
      containers:
        - name: redis
          image: quay.io/microbiome-informatics/redis:7.4
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 60
            periodSeconds: 60
          startupProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: mett-redis-dev
  namespace: mett-dataportal-hl-dev
  labels:
    app: mett-redis-dev
spec:
  type: NodePort
  selector:
    app: mett-redis-dev
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 31678
