k8s/mett-app/overlays/dev/mett-dataportal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gutmicrobes-hl-ingress-dev
  namespace: mett-dataportal-hl-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.gut-microbes.org
      http:
        paths:
        - path: /apidev(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: mett-dataportal-api-svc-dev
              port:
                number: 8000

        - path: /apidev/docs
          pathType: Prefix
          backend:
            service:
              name: mett-dataportal-api-svc-dev
              port:
                number: 8000

        - path: /apidev-static(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: mett-dataportal-api-svc-dev
              port:
                number: 8000

        - path: /static-appdev(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: mett-dataportal-react-app-svc-dev
              port:
                number: 80

        - path: /appdev(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: mett-dataportal-react-app-svc-dev
              port:
                number: 80
